--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,30 @@
         android:theme="@style/Theme.SmartCheck"
         tools:targetApi="31">
         <activity
+            android:name=".history"
+            android:exported="false" />
+        <activity
+            android:name=".complain_status"
+            android:exported="false" />
+        <activity
+            android:name=".raise_a_complain"
+            android:exported="false" />
+        <activity
+            android:name=".pathology_price"
+            android:exported="false" />
+        <activity
+            android:name=".availability_of_blood"
+            android:exported="false" />
+        <activity
+            android:name=".medicine_cost"
+            android:exported="false" />
+        <activity
+            android:name=".home_page"
+            android:exported="false" />
+        <activity
+            android:name=".sign_up"
+            android:exported="false" />
+        <activity
             android:name=".splashscreen"
             android:exported="true">
             <intent-filter>
